# SudokuSolver

./: .flake8  .gitignore  README.md  config.py  globals.py  mkdocs.yml  pyproject.toml  requirements.txt  sudokuLSGA.py  sudoku_solver.py  sudoku_solver_LSGA.py
data/: generated_test_data.py
data/benchmark/: csp_benchmark.csv  lsga_benchmark.csv
docs/: index.md
docs/getting_started/: configuration.md
docs/notebooks/: sudoku_solvers_analysis.ipynb
docs/reference/: csp.md  lsga.md  utils.md
docs/testing/: benchmarks.md
docs/testing/tests/: lsga_tests.md  mac_tests.md
examples/: generated_examples.py
notebooks/: sudoku_solvers_anaylsis.ipynb
src/: logger.py  sudoku_solver_CSP.py  sudoku_solver_LSGA.py  utils.py
tests/: benchmark_sudoku_solver.py  test_sudoku_solver_LSGA.py  test_sudoku_solver_MAC.py
